# ohtu-miniprojekti-2021

./: .coveragerc  .gitignore  .pylintrc  FinalReport.md  LICENSE  README.md  pyproject.toml  routes.py  run_robot_tests.sh
.github/workflows/: cd.yml
models/: readingtip.py
repositories/: readingtip_repository.py
services/: readingtip_service.py
src/: app.py  asd  login.py  routes.py
src/models/: readingtip.py  tag.py  user.py
src/repositories/: readingtip_repository.py  tag_repository.py  user_repository.py
src/services/: readingtip_service.py  tag_service.py  user_service.py
src/templates/: changetip.html  form.html  index.html  layout.html  login.html  newtip.html  register.html  userpage.html
src/tests/: test_app.py
src/tests/models/: readingtip_test.py  user_test.py
src/tests/repositories/: conftest.py  readingtip_repository_test.py  tag_repository_test.py  user_repository_test.py
src/tests/robot/: addtag.robot  addtip.robot  changetip.robot  filtertips.robot  login.robot  readtip.robot  resource.robot
src/tests/services/: login_service_stub.py  readingtip_service_test.py  user_service_test.py
templates/: index.html
