[tool.poetry]
name = "ohtu-miniprojekti-2021"
version = "0.1.0"
description = ""
authors = ["uradora <meri.rajamaki@helsinki.fi>"]

[tool.poetry.dependencies]
python = "3.9.4"
Flask = "^1.1.2"
Jinja2 = "^2.11.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
